add adam's other references

--- a/references/references.bib
+++ b/references/references.bib
@@ -1,15 +1,15 @@
 @incollection{broadbent-karvonen-2022,
-  AUTHOR = { "Broadbent, Anne", "Karvonen, Martti" },
-  TITLE = "Categorical composable cryptography",
-  BOOKTITLE = "Foundations of software science and computation structures",
-  SERIES = "Lecture Notes in Comput. Sci.",
-  VOLUME = 13242,
-  PAGES = 161--183,
-  PUBLISHER = "Springer, Cham",
-  YEAR = 2022,
-  ISBN = 978-3-030-99253-8,
-  DOI = 10.1007/978-3-030-99253-8\_9,
-  URL = "https://doi.org/10.1007/978-3-030-99253-8_9",
+  author = { "Broadbent, Anne", "Karvonen, Martti" },
+  title = "Categorical composable cryptography",
+  booktitle = "Foundations of software science and computation structures",
+  series = "Lecture Notes in Comput. Sci.",
+  volume = 13242,
+  pages = 161--183,
+  publisher = "Springer, Cham",
+  year = 2022,
+  isbn = 978-3-030-99253-8,
+  doi = 10.1007/978-3-030-99253-8\_9,
+  url = "https://doi.org/10.1007/978-3-030-99253-8_9",
 }
 
 @book{katz-lindell-2014,
@@ -21,4 +21,30 @@
   url = "https://books.google.com/books?id=OWZYBQAAQBAJ",
   year = 2014,
   publisher = "Taylor \& Francis",
+}
+
+@ebook{rosulek-2021,
+  title = "The Joy of Cryptography",
+  author = "Mike Rosulek",
+  year = 2021,
+  url = "https://joyofcryptography.com",
+}
+
+@ebook{pass-shelat-2020,
+  title = "A Course in Cryptography",
+  author = { "Raphael Pass", "Abhi Shelat" },
+  year = 2010,
+  url = "https://www.cs.cornell.edu/courses/cs4830/2010fa/lecnotes.pdf",
+}
+
+@inbook{lindell2017,
+  author = "Lindell, Yehuda",
+  title = "How to Simulate It---A Tutorial on the Simulation Proof Technique",
+  booktitle = "Tutorials on the Foundations of Cryptography: Dedicated to Oded
+               Goldreich",
+  year = 2017,
+  publisher = "Springer International Publishing",
+  pages = 277-346,
+  isbn = 978-3-319-57048-8,
+  doi = 10.1007/978-3-319-57048-8_6,
 }
