clean up references

--- a/references/references.bib
+++ b/references/references.bib
@@ -1,20 +1,20 @@
 @incollection{broadbent-karvonen-2022,
-  author = { "Broadbent, Anne", "Karvonen, Martti" },
+  author = "Broadbent, Anne and Karvonen, Martti",
   title = "Categorical composable cryptography",
   booktitle = "Foundations of software science and computation structures",
   series = "Lecture Notes in Comput. Sci.",
   volume = 13242,
-  pages = 161--183,
+  pages = "161-183",
   publisher = "Springer, Cham",
   year = 2022,
-  isbn = 978-3-030-99253-8,
-  doi = 10.1007/978-3-030-99253-8\_9,
+  isbn = 9783030992538,
+  doi = "10.1007/978-3-030-99253-8\_9",
   url = "https://doi.org/10.1007/978-3-030-99253-8_9",
 }
 
 @book{katz-lindell-2014,
   title = "Introduction to Modern Cryptography, Second Edition",
-  author = { "Katz, Jonathan.", "Lindell, Yehuda" },
+  author = "Katz, Jonathan and Lindell, Yehuda",
   isbn = 9781466570269,
   lccn = 2014039042,
   series = "Chapman \& Hall/CRC Cryptography and Network Security Series",
@@ -23,28 +23,28 @@
   publisher = "Taylor \& Francis",
 }
 
-@ebook{rosulek-2021,
+@book{rosulek-2021,
   title = "The Joy of Cryptography",
   author = "Mike Rosulek",
   year = 2021,
   url = "https://joyofcryptography.com",
 }
 
-@ebook{pass-shelat-2020,
+@book{pass-shelat-2020,
   title = "A Course in Cryptography",
   author = { "Raphael Pass", "Abhi Shelat" },
   year = 2010,
   url = "https://www.cs.cornell.edu/courses/cs4830/2010fa/lecnotes.pdf",
 }
 
-@inbook{lindell2017,
+@inbook{lindell-2017,
   author = "Lindell, Yehuda",
   title = "How to Simulate It---A Tutorial on the Simulation Proof Technique",
   booktitle = "Tutorials on the Foundations of Cryptography: Dedicated to Oded
                Goldreich",
   year = 2017,
   publisher = "Springer International Publishing",
-  pages = 277-346,
-  isbn = 978-3-319-57048-8,
-  doi = 10.1007/978-3-319-57048-8_6,
+  pages = "277-346",
+  isbn = 9783319570488,
+  doi = "10.1007/978-3-319-57048-8_6",
 }
