make references work

--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -57,7 +57,7 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 \chapter*{Dedication}
 % TODO: dedication, if I want one
 
-\mainmatter % here the regular arabic numbering starts
+\mainmatter% here the regular arabic numbering starts
 \pagestyle{fancyplain} % turns page numbering back on
 
 \chapter*{Introduction}
@@ -68,11 +68,10 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 
 \chapter{The First}
 
-\backmatter % backmatter makes the index and bibliography appear properly in the t.o.c...
-
+\backmatter{}
 \nocite{*}
 \bibliographystyle{alpha}
 \bibliography{references}
 
-% Finally, an index would go here... but it is also optional.
+% TODO: index?
 \end{document}
