add a math prelude

--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -2,12 +2,6 @@
 %% Preamble
 %%
 \documentclass[12pt,twoside]{reedthesis}
-
-\usepackage{graphicx,latexsym}
-\usepackage{amssymb,amsthm,amsmath}
-\usepackage{longtable,booktabs,setspace}
-\usepackage[hyphens]{url}
-\usepackage{rotating}
 \usepackage{natbib} % TODO: bibliography style
 
 \title{Title} % TODO: title
@@ -30,6 +24,8 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 %\approvedforthe{Committee}
 
 \setlength{\parskip}{0pt} % god why do you make me use this
+
+\input{prelude}
 
 \begin{document}
 
@@ -66,7 +62,9 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 \chaptermark{Introduction}
 \markboth{Introduction}{Introduction}
 
-\chapter{The First}
+\chapter{Cryptography}
+
+\chapter{Category Theory}
 
 \backmatter{}
 \nocite{*}
