add categories section

--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1,1 +1,85 @@
-../references/references.bib
+@incollection{broadbent-karvonen-2022,
+	author = "Broadbent, Anne and Karvonen, Martti",
+	title = "Categorical composable cryptography",
+	booktitle = "Foundations of software science and computation structures",
+	series = "Lecture Notes in Comput. Sci.",
+	volume = 13242,
+	pages = "161-183",
+	publisher = "Springer, Cham",
+	year = 2022,
+	isbn = 9783030992538,
+	doi = "10.1007/978-3-030-99253-8\_9",
+	url = "https://doi.org/10.1007/978-3-030-99253-8_9",
+}
+
+@book{katz-lindell-2014,
+	title = "Introduction to Modern Cryptography, Second Edition",
+	author = "Katz, Jonathan and Lindell, Yehuda",
+	isbn = 9781466570269,
+	lccn = 2014039042,
+	series = "Chapman \& Hall/CRC Cryptography and Network Security Series",
+	url = "https://books.google.com/books?id=OWZYBQAAQBAJ",
+	year = 2014,
+	publisher = "Taylor \& Francis",
+}
+
+@book{rosulek-2021,
+	title = "The Joy of Cryptography",
+	author = "Mike Rosulek",
+	year = 2021,
+	url = "https://joyofcryptography.com",
+}
+
+@book{pass-shelat-2020,
+	title = "A Course in Cryptography",
+	author = { "Raphael Pass", "Abhi Shelat" },
+	year = 2010,
+	url = "https://www.cs.cornell.edu/courses/cs4830/2010fa/lecnotes.pdf",
+}
+
+@inbook{lindell-2017,
+	author = "Lindell, Yehuda",
+	title = "How to Simulate It---A Tutorial on the Simulation Proof Technique",
+	booktitle = "Tutorials on the Foundations of Cryptography: Dedicated to Oded
+	             Goldreich",
+	year = 2017,
+	publisher = "Springer International Publishing",
+	pages = "277-346",
+	isbn = 9783319570488,
+	doi = "10.1007/978-3-319-57048-8_6",
+}
+
+@book{riehl-2017,
+	title = "Category theory in context",
+	author = "Riehl, Emily",
+	abstract = "Introduction to concepts of category theory --- categories,
+	            functors, natural transformations, the Yoneda lemma, limits and
+	            colimits, adjunctions, monads --- revisits a broad range of
+	            mathematical examples from the categorical perspective. 2016
+	            edition.",
+	publisher = "Courier Dover Publications",
+	month = mar,
+	year = 2017,
+	language = "en",
+}
+
+@book{maclane-1971,
+	added-at = {2009-09-18T21:22:09.000+0200},
+	address = {New York},
+	author = {MacLane, Saunders},
+	biburl = {
+	          https://www.bibsonomy.org/bibtex/29e8ca8b4bf357cc41e40e98cca25cb8c/minas
+	          },
+	interhash = {51566d046db4c3ea930c2b5ca79173f1},
+	intrahash = {9e8ca8b4bf357cc41e40e98cca25cb8c},
+	keywords = {CategoryTheory},
+	mrclass = {18-02},
+	mrnumber = {MR0354798 (50 \#7275)},
+	mrreviewer = {H.-B. Brinkmann},
+	note = {Graduate Texts in Mathematics, Vol. 5},
+	pages = {ix+262},
+	publisher = {Springer-Verlag},
+	timestamp = {2009-09-18T21:22:09.000+0200},
+	title = {Categories for the Working Mathematician},
+	year = 1971,
+}
