--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -19,6 +19,7 @@
 \usepackage{mathpartir}
 \usepackage[justification=centering]{caption}
 \usepackage{txfonts}
+\usepackage[section]{placeins}
 \usepackage[normalem]{ulem}
 \usepackage{subcaption}
 \usepackage[unicode=true, pdfusetitle,
@@ -32,6 +33,12 @@
  final
 ]{hyperref}
 \usepackage[capitalise]{cleveref}
+\usepackage{todonotes}
+
+% TODONOTESs
+\newcommand{\td}[1]{\todo[color=orange!20]{TODO: #1}}
+\newcommand{\rs}[1]{\todo[color=blue!20]{#1\\ --Riley}}
+\newcommand{\sz}[1]{\todo[color=green!20]{#1\\ --Steve}}
 
 %% ALPHABETS %%
 \def\cA{\mathcal{A}}
@@ -88,9 +95,52 @@
 \def\YY{\mathbb{Y}}
 \def\ZZ{\mathbb{Z}}
 
+\def\kk{\Bbbk}
+
 %% DIAGRAMS %%
 \newcommand{\punctuation}[1]{\makebox[0pt][l]{#1}}
 
 %% FONT CONVENTIONS %%
 \newcommand{\cat}[1]{{\mathcal{#1}}}
 \newcommand{\scat}[1]{{\textsc{\text{#1}}}}
+
+%% THEOREMS %%
+\theoremstyle{plain}
+\newtheorem{thm}{Theorem}[section]
+\newtheorem*{thm*}{Theorem} % no numbering
+\newtheorem{lemma}[thm]{Lemma} % use the same counter as theorem
+\newtheorem{prop}[thm]{Proposition} % ditto
+\newtheorem{cor}{Corollary}[thm] % reset for every theorem
+\newtheorem{prob}{Problem}
+\newtheorem{prob_lemma}{Lemma}[prob]
+\newtheorem{exc}{Exercise}[section]
+
+\theoremstyle{definition}
+\newtheorem{dfn}{Definition}[section]
+\newtheorem*{dfn*}{Definition}
+\newtheorem{ex}{Example}[section]
+
+\theoremstyle{remark}
+\newtheorem*{rmk}{Remark}
+\newtheorem*{ntn}{Notation}
+
+
+ %Cleveref definitions
+\crefname{lemma}{Lemma}{Lemmas}
+\crefname{thm}{Theorem}{Theorems}
+\crefname{defn}{Definition}{Definitions}
+\crefname{notn}{Notation}{Notations}
+\crefname{const}{Construction}{Constructions}
+\crefname{prop}{Proposition}{Propositions}
+\crefname{rem}{Remark}{Remarks}
+\crefname{cor}{Corollary}{Corollaries}
+\crefname{equation}{Diagram}{Diagrams}
+\crefname{ex}{Example}{Examples}
+
+%% FORMATTING %%
+% https://tex.stackexchange.com/a/650378
+\let\tempone\itemize
+\let\temptwo\enditemize
+\renewenvironment{itemize}{
+\tempone\setlength{\itemsep}{-1ex}}
+{\temptwo}
