--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -1,3 +1,4 @@
+% vim:ft=tex
 %%
 %% Preamble
 %%
@@ -16,14 +17,13 @@
 \department{Mathematics} % won't compile without this
 \thedivisionof{The Established Interdisciplinary Committee\\for Mathematics and
 Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-handbook.pdf
-
 % TODO: spacing on the title page, this is a big hack
 
 % if you want the approval page to say "Approved for the Committee",
 % uncomment the next line
 %\approvedforthe{Committee}
 
-\setlength{\parskip}{0pt} % god why do you make me use this
+\setlength{\parskip}{0pt}
 
 \input{prelude}
 
@@ -65,6 +65,7 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 \chapter{Cryptography}
 
 \chapter{Category Theory}
+\input{category-theory}
 
 \backmatter{}
 \nocite{*}
