--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -83,3 +83,17 @@
 	title = {Categories for the Working Mathematician},
 	year = 1971,
 }
+
+@article{baez-2017,
+	doi = {10.1142/s0129055x17500283},
+	url = {https://doi.org/10.1142%2Fs0129055x17500283},
+	year = 2017,
+	month = {sep},
+	publisher = {World Scientific Pub Co Pte Ltd},
+	volume = {29},
+	number = {09},
+	pages = {1750028},
+	author = {John C. Baez and Blake S. Pollard},
+	title = {A compositional framework for reaction networks},
+	journal = {Reviews in Mathematical Physics},
+}
