--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -63,6 +63,7 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 \markboth{Introduction}{Introduction}
 
 \chapter{Cryptography}
+\input{cryptography}
 
 \chapter{Category Theory}
 \input{category-theory}
