add pseudorandom generators

--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -59,9 +59,9 @@ categories look quite different.
       graph, whose objects are nodes and whose morphisms are paths.
       % This higher dimensional stuff is cool and it's how I think about these
       % objects, but probably not necessary for our purposes. --riley
-    \item There is a category whose objects are (roughly) groups of molecules
-      and whose morphisms are chemical reactions. See \cite{baez-2017} for a
-      formalization of this notion.
+		\item There is a category whose objects are (roughly) multisets of molecules
+			and whose morphisms are chemical reactions. See \cite{baez-2017} for a
+			formalization of this notion.
   \end{itemize}
 \end{ex}
 
