--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -97,3 +97,48 @@
 	title = {A compositional framework for reaction networks},
 	journal = {Reviews in Mathematical Physics},
 }
+
+@article{coecke-2016,
+	title = {A mathematical theory of resources},
+	journal = {Information and Computation},
+	volume = {250},
+	pages = {59-86},
+	year = {2016},
+	note = {Quantum Physics and Logic},
+	issn = {0890-5401},
+	doi = {https://doi.org/10.1016/j.ic.2016.02.008},
+	url = {https://www.sciencedirect.com/science/article/pii/S0890540116000353},
+	author = {Bob Coecke and Tobias Fritz and Robert W. Spekkens},
+	abstract = {Many fields of science investigate states and processes as
+	            resources. Chemistry, thermodynamics, Shannon's theory of
+	            communication channels, and the theory of quantum entanglement are
+	            prominent examples. Questions addressed by these theories include:
+	            Which resources can be converted into which others? At what rate
+	            can many copies of one resource be converted into many copies of
+	            another? Can a catalyst enable a conversion? How to quantify a
+	            resource? We propose a general mathematical definition of resource
+	            theory. We prove general theorems about how resource theories can
+	            be constructed from theories of processes with a subclass of
+	            processes that are freely implementable. These define the means by
+	            which costly states and processes can be interconverted. We outline
+	            how various existing resource theories fit into our framework,
+	            which is a first step in a project of identifying universal
+	            features and principles of resource theories. We develop a few
+	            general results concerning resource convertibility.},
+}
+
+@article{goldreich-krawczyk-1996,
+	author = {Goldreich, Oded and Krawczyk, Hugo},
+	title = {On the Composition of Zero-Knowledge Proof Systems},
+	journal = {SIAM Journal on Computing},
+	volume = {25},
+	number = {1},
+	pages = {169-192},
+	year = {1996},
+	doi = {10.1137/S0097539791220688},
+	URL = { https://doi.org/10.1137/S0097539791220688 },
+	eprint = { https://doi.org/10.1137/S0097539791220688 },
+}
+
+
+
