--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -3,7 +3,6 @@
 %% Preamble
 %%
 \documentclass[12pt,twoside]{reedthesis}
-\usepackage{natbib} % TODO: bibliography style
 
 \title{Title} % TODO: title
 \author{Riley Shahar}
@@ -14,14 +13,14 @@
 % TODO: order of advisors?
 \advisor{Angélica Osorno}
 \altadvisor{Adam Groce}
-\department{Mathematics} % won't compile without this
+\department{Mathematics and Computer Science} % won't compile without this
 \thedivisionof{The Established Interdisciplinary Committee\\for Mathematics and
-Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-handbook.pdf
+	Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-handbook.pdf
 % TODO: spacing on the title page, this is a big hack
 
 % if you want the approval page to say "Approved for the Committee",
 % uncomment the next line
-%\approvedforthe{Committee}
+\approvedforthe{Committee}
 
 \setlength{\parskip}{0pt}
 
@@ -33,34 +32,34 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 \frontmatter
 \pagestyle{empty} % TODO: can I roman numerial number it?
 
-\chapter*{Acknowledgements}
+% \chapter*{Acknowledgements}
 % TODO: acknowledgements
 
-\chapter*{Preface}
+% \chapter*{Preface}
 % TODO: preface
 
-\chapter*{List of Abbreviations}
+% \chapter*{List of Abbreviations}
 % TODO: abbreviations
 
 \tableofcontents
 \listoftables
 \listoffigures
 
-\chapter*{Abstract}
+% \chapter*{Abstract}
 % TODO: abstract
 % TODO: is there a better abstract style we can use?
 
-\chapter*{Dedication}
+% \chapter*{Dedication}
 % TODO: dedication, if I want one
 
 \mainmatter% here the regular arabic numbering starts
 \pagestyle{fancyplain} % turns page numbering back on
 
-\chapter*{Introduction}
-% from the template
-\addcontentsline{toc}{chapter}{Introduction}
-\chaptermark{Introduction}
-\markboth{Introduction}{Introduction}
+% \chapter*{Introduction}
+% % from the template
+% \addcontentsline{toc}{chapter}{Introduction}
+% \chaptermark{Introduction}
+% \markboth{Introduction}{Introduction}
 
 \chapter{Cryptography}
 \input{cryptography}
@@ -70,8 +69,7 @@ Computer Science\\} % name from p.24 https://www.reed.edu/registrar/pdfs/senior-
 
 \backmatter{}
 \nocite{*}
-\bibliographystyle{alpha}
-\bibliography{references}
+\printbibliography
 
 % TODO: index?
 \end{document}
